--- a/Cookify.Web/Areas/User/Views/Recipe/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Index.cshtml
@@ -21,15 +21,16 @@
         <div class="recipes-page__grid">
             @if (Model.Count > 0)
             {
-                <div class="product-grid">
-                    @foreach (var recipe in Model)
-                    {
-                        <a asp-action="Details" asp-route-id="@recipe.Id" class="product-grid__item">
-                            <img src="~/assets/placeholders/chicken.jpg" />
-                            <span>@recipe.Name</span>
-                        </a>
-                    }
-                </div>
+            <div class="product-grid">
+                @foreach (var recipe in Model)
+                {
+                    <partial name="_RecipeGridItem" model="recipe" />
+                    <a asp-action="Details" asp-route-id="@recipe.Id" class="product-grid__item">
+                        <img src="~/assets/placeholders/chicken.jpg" />
+                        <span>@recipe.Name</span>
+                    </a>
+                }
+            </div>
             }
             else
             {
