--- a/Cookify.Web/wwwroot/scss/base/_typography.scss
+++ b/Cookify.Web/wwwroot/scss/base/_typography.scss
@@ -7,6 +7,11 @@ body{
   font-family: 'Open Sans', sans-serif;
 }
 
+::selection{
+  color: $white;
+  background: $orange;
+}
+
 h1, h2, h3, h4, h5, h6{
   font-family: 'Montserrat', sans-serif;
 }
