--- a/Cookify.Web/wwwroot/scss/components/_favorite-heart.scss
+++ b/Cookify.Web/wwwroot/scss/components/_favorite-heart.scss
@@ -1,22 +1,20 @@
 .favorite-heart {
     @include circle(40px);
-    position: absolute;
     background-color: $white;
-    top: 15px;
-    right: 15px;
+    cursor: pointer;
 
-    & .heart-filled {
+    & .heart-empty, .heart-filled{
         width: 70%;
-        opacity: 0;
         @include transition;
         position: absolute;
     }
 
+    & .heart-filled {
+        opacity: 0;
+    }
+
     & .heart-empty {
-        width: 70%;
         opacity: 1;
-        @include transition;
-        position: absolute;
     }
 
     &.filled {
