Add list of favorite recipes

--- a/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
@@ -31,7 +31,7 @@
             <img src="~/assets/icons/components/checked-list-orange.svg" alt="Lista zakupów" />
             <span>Lista zakupów</span>
         </a>
-        <a href="#" class="ck-nav__links__item">
+        <a asp-area="User" asp-controller="FavoriteRecipe" asp-action="Index" class="ck-nav__links__item">
             <img src="~/assets/icons/components/heart-orange.svg" alt="Ulubione" />
             <span>Ulubione</span>
         </a>
