--- a/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
@@ -43,10 +43,10 @@
             <div class="ck-dropdown-menu to-right">
                 @if (SignInManager.IsSignedIn(User))
                 {
-                    <a href="#" class="ck-dropdown-menu__link">
+                    <a asp-area="User" asp-controller="Recipe" asp-action="Upsert" class="ck-dropdown-menu__link">
                         Wyślij swój przepis
                     </a>
-                    <a href="#" class="ck-dropdown-menu__link">
+                    <a asp-area="User" asp-controller="FavoriteRecipe" asp-action="Index" class="ck-dropdown-menu__link">
                         Ulubione przepisy
                     </a>
                     <a asp-area="Identity" asp-page="/Account/Manage/Index" class="ck-dropdown-menu__link">
