--- a/Cookify.Web/Views/Shared/_Layout.cshtml
+++ b/Cookify.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     @await Component.InvokeAsync("SearchPopup")
     @await Component.InvokeAsync("CategoryPopup")
     @await Component.InvokeAsync("IngredientPopup")
+    @await Component.InvokeAsync("UserMessagePopup")
 
     @Html.AntiForgeryToken()
 
