--- a/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
@@ -6,10 +6,10 @@
         <div class="popup__content__title h1">Na co masz dzisiaj ochotę?</div>
         <partial name="_SearchBarPartial" />
         <div class="title-card-group">
-            <div class="title-card mobile-h2 open-category-popup">
+            <div class="title-card mobile-h2 open-category-popup clickable">
                 Przeglądaj kategorie
             </div>
-            <div class="title-card mobile-h2 open-ingredient-popup">
+            <div class="title-card mobile-h2 open-ingredient-popup clickable">
                 Szukaj wg. składników
             </div>
         </div>
