--- a/Cookify.Web/wwwroot/scss/components/_popup.scss
+++ b/Cookify.Web/wwwroot/scss/components/_popup.scss
@@ -67,6 +67,10 @@
   }
 
   &.user-message-popup{
+    @include d-flex($center: true);
     
+    & .user-message-popup__content{
+      max-width: 800px;
+    }
   }
 }
