--- a/Cookify.Web/Views/Shared/_Layout.cshtml
+++ b/Cookify.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     @await Component.InvokeAsync("CategoryPopup")
     @await Component.InvokeAsync("IngredientPopup")
     @await Component.InvokeAsync("UserMessagePopup")
+    @await Component.InvokeAsync("Loader")
 
     @Html.AntiForgeryToken()
 
