--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -21,6 +21,7 @@
 @import "./components/filters-sidebar";
 @import "./components/form";
 @import "./components/home-header";
+@import "./components/loader";
 @import "./components/popup";
 @import "./components/product-grid";
 @import "./components/recipe-brief";
