--- a/Cookify.Web/Areas/Admin/Views/RecipeCategory/Upsert.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/RecipeCategory/Upsert.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Cookify.Models.RecipeCategory
 
 @{
-    var title = "Create new recipe category";
+    var title = "Dodaj nową kategorię";
 }
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     @if (Model.Id != 0)
     {
-        title = "Edit recipe category";
+        title = "Edytuj kategorię";
     }
     <div class="admin-header">
         <h1 class="admin-header__title">@title</h1>
@@ -17,6 +17,8 @@
         <div class="admin-form__group">
             <label asp-for="Title"></label>
             <input asp-for="Title" />
+            <label asp-for="ImageUrl"></label>
+            <input asp-for="ImageUrl" />
             <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="admin-form__actions">
