--- a/Cookify.Web/Areas/User/Views/Recipe/Upsert.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Upsert.cshtml
@@ -6,7 +6,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var title = "Create new recipe";
+    var title = "Dodaj nowy przepis";
 }
 
 <form method="post">
@@ -14,7 +14,7 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @if (Model.Recipe.Id != 0)
         {
-            title = "Edit recipe";
+            title = "Edytuj przepis";
         }
         <div class="col-12 border-bottom">
             <h2 class="text-primary">@title</h2>
@@ -49,13 +49,20 @@
                     <input asp-for="Recipe.PreparationTime" class="form-control" />
                     <span asp-validation-for="Recipe.PreparationTime" class="text-danger"></span>
                 </div>
+                <div class="col-4">
+                    <label asp-for="Recipe.ImageUrl"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Recipe.ImageUrl" class="form-control" />
+                    <span asp-validation-for="Recipe.ImageUrl" class="text-danger"></span>
+                </div>
             </div>
             <div class="form-group row">
                 <div class="col-4">
                     Category
                 </div>
                 <div class="col-8">
-                    @Html.DropDownListFor(m => m.Recipe.RecipeCategoryId, Model.RecipeCategoryList, "> Select recipe category <", new { @class = "form-control" })
+                    @Html.DropDownListFor(m => m.Recipe.RecipeCategoryId, Model.RecipeCategoryList, "> Wybierz kategorię przepisu <", new { @class = "form-control" })
                     <span asp-validation-for="Recipe.RecipeCategoryId" class="text-danger"></span>
                 </div>
             </div>
