--- a/Cookify.Web/Views/Shared/Components/CategoryPopup/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/CategoryPopup/Default.cshtml
@@ -11,7 +11,7 @@
                     @foreach (var recipeCategory in Model)
                     {
                         <a href="#" class="category-panels__item">
-                            <img src="~/assets/placeholders/category-soups.jpg" class="category-panels__item__bg" />
+                            <img src="@recipeCategory.ImageUrl" class="category-panels__item__bg" />
                             <div class="category-panels__item__content">
                                 <span>@recipeCategory.Title</span>
                             </div>
