--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -28,6 +28,7 @@
 @import "./components/search-bar";
 @import "./components/table";
 @import "./components/title-card";
+@import "./components/tooltip";
 @import "./components/user-panels";
 
 @import "./layout/admin-header";
@@ -37,3 +38,4 @@
 
 @import "./pages/home";
 @import "./pages/recipes";
+@import "./pages/single-recipe";
