Single recipe styles

--- a/Cookify.Web/wwwroot/scss/components/_inputs.scss
+++ b/Cookify.Web/wwwroot/scss/components/_inputs.scss
@@ -1,8 +1,17 @@
-.bordered-input{
+.bordered-input, .bordered-textarea{
   background: $white;
   border: 1px solid $grey-600;
   border-radius: 5px;
   width: 100%;
+}
+
+.bordered-input{
   height: 60px;
   padding: 0 12px;
+}
+
+.bordered-textarea{
+  height: 180px;
+  padding: 12px;
+  resize: none;
 }
