--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -16,6 +16,8 @@
 @import "./components/admin-form";
 @import "./components/admin-panels";
 @import "./components/category-panels";
+@import "./components/comment-form";
+@import "./components/comments";
 @import "./components/dropdown-menu";
 @import "./components/favorite-heart";
 @import "./components/filters-sidebar";
