--- a/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
@@ -32,6 +32,7 @@
                         <div class="comment-form__title mobile-h2">
                             Napisz komentarz
                         </div>
+
                         <textarea asp-for="Comment.Content" placeholder="Twój komentarz..." class="bordered-textarea"></textarea>
 
                         <input hidden asp-for="Comment.RecipeId" value="@Model.Recipe.Id" />
@@ -39,19 +40,22 @@
 
                         <button asp-controller="Recipe" asp-action="AddComment" class="comment-form__submit ck-btn">Wyślij</button>
                     </form>
-                    <div class="comments">
-                        @foreach (var comment in Model.Comments)
-                        {
-                            <div class="comments__item">
-                                <div class="comments__item__title mobile-h2">
-                                    @comment.ApplicationUser.Name
+                    @if (Model.Comments.Count() > 0)
+                    {
+                        <div class="comments">
+                            @foreach (var comment in Model.Comments)
+                            {
+                                <div class="comments__item">
+                                    <div class="comments__item__title mobile-h2">
+                                        @comment.ApplicationUser.Name
+                                    </div>
+                                    <div class="comments__item__content">
+                                        @comment.Content
+                                    </div>
                                 </div>
-                                <div class="comments__item__content">
-                                    @comment.Content
-                                </div>
-                            </div>
-                        }
-                    </div>
+                            }
+                        </div>
+                    }
                 </div>
             </div>
             <div class="single-recipe__sidebar-con">
