--- a/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Cookify.Models.ViewModels.RecipeViewModel
+﻿@using Cookify.Utility;
+@model Cookify.Models.ViewModels.RecipeViewModel
 
 @if (Model != null)
 {
@@ -37,8 +38,14 @@
 
                         <input hidden asp-for="Comment.RecipeId" value="@Model.Recipe.Id" />
                         <input hidden asp-for="FavoriteRecipe.RecipeId" value="@Model.Recipe.Id" />
-
-                        <button asp-controller="Recipe" asp-action="AddComment" class="comment-form__submit ck-btn">Wyślij</button>
+                        @if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_User))
+                        {
+                            <button asp-controller="Recipe" asp-action="AddComment" class="comment-form__submit ck-btn">Wyślij</button>
+                        }
+                        else
+                        {
+                            <span>Musisz się zalogować, by dodać komentarz.</span>
+                        }
                     </form>
                     @if (Model.Comments.Count() > 0)
                     {
@@ -82,84 +89,3 @@
         </div>
     </article>
 }
-
-@*<br />
-<div class="p-4 border rounded">
-    @if (Model != null)
-    {
-        <img src="@Model.Recipe.ImageUrl" width="50%" alt="">
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Nazwa
-                    </th>
-                    <th>
-                        Opis
-                    </th>
-                    <th>
-                        Kategoria
-                    </th>
-                    <th>
-                        Poziom trudności
-                    </th>
-                    <th>
-                        Czas przygotowania
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td width="20%">@Model.Recipe.Name</td>
-                    <td width="50%">@Model.Recipe.Description</td>
-                    <td width="10%">@Model.Recipe.RecipeCategory.Title</td>
-                    <td width="10%">@Model.Recipe.DifficultyLevel</td>
-                    <td width="10%">@Model.Recipe.PreparationTime</td>
-                </tr>
-                <tr>
-                    <td colspan="5">
-                        <form method="post">
-                            <textarea asp-for="Comment.Content" placeholder="Wpisz tutaj treść swojego komentarza..." style="width: 100%;"></textarea><br />
-
-                            <input hidden asp-for="Comment.RecipeId" value="@Model.Recipe.Id" />
-                            <input hidden asp-for="FavoriteRecipe.RecipeId" value="@Model.Recipe.Id" />
-
-                            <button asp-controller="Recipe" asp-action="AddComment">Dodaj komentarz</button>
-
-                            @if (Model.FavoriteRecipe == null)
-                            {
-                                <button asp-controller="Recipe" asp-action="AddToFavorites">Dodaj do ulubionych</button>
-                            }
-                            else
-                            {
-                                <button asp-controller="Recipe" asp-action="AddToFavorites">Usuń z ulubionych</button>
-                            }
-                        </form>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="5">
-                        <a asp-action="Index">Wróć do listy przepisów</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        @if (Model.Comments.Count() > 0)
-        {
-            <ul>
-                @foreach (var comment in Model.Comments)
-                {
-                    <li>@comment.Content</li>
-                }
-            </ul>
-        }
-        else
-        {
-            <p>Nie ma komentarzy dla tego przepisu.</p>
-        }
-    }
-    else
-    {
-        <p>Coś poszło nie tak! :(</p>
-    }
-</div>*@
