--- a/Cookify.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Cookify.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,29 +1,26 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Twoje dane";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h4>@ViewData["Title"]</h4>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-        </form>
+<form class="ck-form white-panel" id="account" method="post">
+
+    <partial name="_StatusMessage" model="Model.StatusMessage" />
+
+    <h1 class="ck-form__title h1">@ViewData["Title"]</h1>
+
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    <div class="ck-form__field">
+        <input asp-for="Username" class="bordered-input" placeholder="Nazwa użytkownika" />
+        <span asp-validation-for="Username" class="text-danger"></span>
     </div>
-</div>
+
+    <button type="submit" class="ck-btn">Zapisz</button>
+
+</form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
