--- a/Cookify.Web/Areas/User/Views/Home/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Home/Index.cshtml
@@ -29,12 +29,12 @@
     <h2 class="h2"><span>Popularne kategorie</span></h2>
 
     <div class="category-panels">
-        @for (int i = 0; i < 6; i++)
+        @foreach (var category in Model.Categories) 
         {
             <a href="#" class="category-panels__item">
-                <img src="~/assets/placeholders/category-soups.jpg" class="category-panels__item__bg" />
+                <img src="@category.ImageUrl" class="category-panels__item__bg" />
                 <div class="category-panels__item__content">
-                    <span>Zupy</span>
+                    <span>@category.Title</span>
                 </div>
             </a>
         }
