--- a/Cookify.Web/wwwroot/scss/base/_reset.scss
+++ b/Cookify.Web/wwwroot/scss/base/_reset.scss
@@ -17,6 +17,7 @@ html{
 body{
   overflow-x: hidden;
   position: relative;
+  min-height: 100vh;
   background-color: $cream;
   padding-bottom: 110px;
 
