User recipe adding and data styles

--- a/Cookify.Web/Views/Shared/Components/IngredientPopup/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/IngredientPopup/Default.cshtml
@@ -11,7 +11,7 @@
                     @foreach (var ingredient in Model)
                     {
                         <a href="#" class="category-panels__item">
-                            <img src="@ingredient.ImageUrl" class="category-panels__item__bg" />
+                            <img src="~/assets/placeholders/category-soups.jpg" class="category-panels__item__bg" />
                             <div class="category-panels__item__content">
                                 <span>@ingredient.Name</span>
                             </div>
