--- a/Cookify.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/User/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="admin-header">
     <h1 class="admin-header__title">Użytkownicy</h1>
-    <a asp-area="Identity" asp-page="/Account/Register" class="admin-btn">Create a new user</a>
+    <a asp-area="Identity" asp-page="/Account/Register" class="admin-btn">Stwórz nowego użytkownika</a>
 </div>
 
 @if (Model.Count > 0)
@@ -36,8 +36,8 @@
                     <td width="25%">@user.Email</td>
                     <td width="10%">@user.Role</td>
                     <td width="10%"><input type="checkbox" disabled checked="@user.Accepted" /></td>
-                    <td width="5%"><a asp-action="Upsert" asp-route-id="@user.Id" class="admin-btn">Edit</a></td>
-                    <td width="5%"><a asp-action="Delete" asp-route-id="@user.Id" class="admin-btn">Delete</a></td>
+                    <td width="5%"><a asp-action="EditUser" asp-route-id="@user.Id" class="admin-btn">Edytuj</a></td>
+                    <td width="5%"><a asp-action="Delete" asp-route-id="@user.Id" class="admin-btn">Usuń</a></td>
                 </tr>
             }
         </tbody>
