--- a/Cookify.Web/Areas/User/Views/FavoriteRecipe/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/FavoriteRecipe/Index.cshtml
@@ -1,24 +1,33 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="recipes-page ck-container">
-    <h1 class="h1">Ulubione przepisy</h1>
-    <div class="recipes-page__main">
-        <div class="recipes-page__grid">
-            @if (Model.Count > 0)
-            {
-                <div class="product-grid">
-                    @foreach (var recipe in Model)
-                    {
-                        <partial name="_RecipeGridItem" model="recipe" />
-                    }
-                </div>
-            }
-            else
-            {
-                <p>Nie masz żadnego przepisu w ulubionych! <a asp-controller="Recipe" asp-action="Index">Dodaj jakiś!</a></p>
-            }
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="recipes-page ck-container">
+        <h1 class="h1">Ulubione przepisy</h1>
+        <div class="recipes-page__main">
+            <div class="recipes-page__grid">
+                @if (Model.Count > 0)
+                {
+                    <div class="product-grid">
+                        @foreach (var recipe in Model)
+                        {
+                            <partial name="_RecipeGridItem" model="recipe" />
+                        }
+                    </div>
+                }
+                else
+                {
+                    <p>Nie masz żadnego przepisu w ulubionych! <a asp-controller="Recipe" asp-action="Index">Dodaj jakiś!</a></p>
+                }
+            </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <a asp-area="Identity" asp-page="/Account/Login">Zaloguj się w celu dodawania przepisów do ulubionych</a>
+}
