--- a/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
@@ -68,7 +68,7 @@
             <div class="single-recipe__sidebar-con">
                 <div class="single-recipe__sidebar">
                     <div class="single-recipe__sidebar__item ck-tooltip-con">
-                        <div class="favorite-heart">
+                        <div class="favorite-heart" data-filled="true">
                             <img class="heart-empty" src="~/assets/icons/components/heart.svg" alt="">
                             <img class="heart-filled" src="~/assets/icons/components/heart-filled.svg" alt="">
                         </div>
