Fill heart if the recipe is favorite one

--- a/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
@@ -1,6 +1,10 @@
 ﻿@using Cookify.Utility;
 @model Cookify.Models.ViewModels.RecipeViewModel
 
+@{
+    var heartFilled = Model.FavoriteRecipe != null ? "true" : "false";
+}
+
 @if (Model != null)
 {
     <article class="single-recipe">
@@ -68,7 +72,7 @@
             <div class="single-recipe__sidebar-con">
                 <div class="single-recipe__sidebar">
                     <div class="single-recipe__sidebar__item ck-tooltip-con">
-                        <div class="favorite-heart" data-filled="true">
+                        <div class="favorite-heart" data-filled="@heartFilled" data-recipe-id="@Model.Recipe.Id">
                             <img class="heart-empty" src="~/assets/icons/components/heart.svg" alt="">
                             <img class="heart-filled" src="~/assets/icons/components/heart-filled.svg" alt="">
                         </div>
