Added links to User Management in Admin Panel & link to Panel Admin for Admin Users in Profile Management

--- a/Cookify.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <img class="admin-panels__item__bg" src="~/assets/placeholders/admin-categories.jpg" />
         <span>Kategorie</span>
     </a>
-    <a href="#" class="admin-panels__item">
+    <a asp-area="Admin" asp-controller="User" asp-action="Index"class="admin-panels__item">
         <img class="admin-panels__item__bg" src="~/assets/placeholders/admin-users.jpg" />
         <span>Użytkownicy</span>
     </a>
