--- a/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Cookify.Utility;
 
 
 @inject SignInManager<ApplicationUser> SignInManager
@@ -52,6 +53,12 @@
                     <a asp-area="Identity" asp-page="/Account/Manage/Index" class="ck-dropdown-menu__link">
                         Ustawienia
                     </a>
+                    @if (User.IsInRole(StaticDetails.Role_Admin))
+                    {
+                        <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="ck-dropdown-menu__link">
+                            Panel Administratora
+                        </a>
+                    }
                     <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                         <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Wyloguj</button>
                     </form>
