--- a/Cookify.Web/Areas/Admin/Views/User/EditUser.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/User/EditUser.cshtml
@@ -14,8 +14,8 @@
     <div class="admin-form">
         <div class="admin-form__group">
             <label asp-for="Id"></label>
-            <input asp-for="Id" />
-            <span asp-validation-for="UserName" disabled class="text-danger"></span>
+            <input asp-for="Id" disabled/>
+            <span asp-validation-for="UserName" class="text-danger"></span>
         </div>
         <div class="admin-form__group">
             <label asp-for="UserName">User Name</label>
@@ -26,10 +26,6 @@
             <label asp-for="Email"></label>
             <input asp-for="Email" />
             <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="admin-form__group">
-            <label asp-for="Accepted"></label>
-            <input type="checkbox" asp-for="Accepted" checked="checked" />
         </div>
         <div class="admin-btn-group">
             <button type="submit" class="admin-btn" asp-route-id="@Model.Id">Zapisz</button>
