--- a/Cookify.Web/wwwroot/scss/pages/_single-recipe.scss
+++ b/Cookify.Web/wwwroot/scss/pages/_single-recipe.scss
@@ -58,6 +58,8 @@
     }
 
     &__section{
+      padding: 20px 23px 27px;
+      
       &__title{
         @include d-flex($ai: center);
         margin-bottom: 18px;
