--- a/Cookify.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/User/Index.cshtml
@@ -17,9 +17,6 @@
                 <th width="10%">
                     Role
                 </th>
-                <th width="10%">
-                    Accepted
-                </th>
                 <th width="5%">
                     Edit
                 </th>
@@ -35,9 +32,9 @@
                     <td width="15%">@user.Name</td>
                     <td width="25%">@user.Email</td>
                     <td width="10%">@user.Role</td>
-                    <td width="10%"><input type="checkbox" disabled checked="@user.Accepted" /></td>
                     <td width="5%"><a asp-action="EditUser" asp-route-id="@user.Id" class="admin-btn">Edytuj</a></td>
-                    <td width="5%"><a asp-action="Delete" asp-route-id="@user.Id" class="admin-btn">Usuń</a></td>
+                    <td width="5%"><form asp-action="DeleteUser" asp-route-id="@user.Id" method="post">
+                        <button type="submit" class="admin-btn">Usuń</button></form></td>
                 </tr>
             }
         </tbody>
