Recipes setup and fixes

--- a/Cookify.Web/Areas/Admin/Views/Recipe/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Recipe/Index.cshtml
@@ -46,7 +46,7 @@
                 <tr>
                     <td width="10%">@recipe.Id</td>
                     <td width="10%">@recipe.Name</td>
-                    <td width="20%">@recipe.Description</td>
+                    <td width="20%"><div style="max-height: 200px; overflow: hidden;">@recipe.Description</div></td>
                     <td width="10%">@recipe.RecipeCategory.Title</td>
                     <td width="10%">@recipe.DifficultyLevel</td>
                     <td width="10%">@recipe.PreparationTime</td>
