--- a/Cookify.Web/Areas/User/Views/Recipe/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Index.cshtml
@@ -20,7 +20,7 @@
             }
             else
             {
-                <p>There are no recipes in the database!</p>
+                <p>Nie znaleziono przepisów.</p>
             }
         </div>
     </div>
