--- a/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Details.cshtml
@@ -16,12 +16,12 @@
                 <h1 class="single-recipe__content__title white-panel">
                     @Model.Recipe.Name
                 </h1>
-                <div class="single-recipe__content__section white-panel">
+                @*<div class="single-recipe__content__section white-panel">
                     <h2 class="single-recipe__content__section__title h3">Składniki</h2>
                     <p>
                         @Model.Recipe.Description
                     </p>
-                </div>
+                </div>*@
                 <div class="single-recipe__content__section white-panel">
                     <h2 class="single-recipe__content__section__title h3">Instrukcje</h2>
                     <p>
@@ -33,7 +33,7 @@
                         <img src="~/assets/icons/components/comment.svg" alt="">
                         <span>Komentarze (@Model.Comments.Count())</span>
                     </h2>
-                    <form method="post" class="comment-form">
+                    <form method="post" class="comment-form" id="comments-form">
                         <div class="comment-form__title mobile-h2">
                             Napisz komentarz
                         </div>
@@ -81,9 +81,9 @@
                         </div>
                     </div>
                     <div class="single-recipe__sidebar__item ck-tooltip-con go-to-comments">
-                        <div class="single-recipe__sidebar__item__inner">
+                        <a href="#comments-form" class="single-recipe__sidebar__item__inner">
                             <img src="~/assets/icons/components/comment-green.svg" alt="">
-                        </div>
+                        </a>
                         <div class="ck-tooltip">
                             napisz komentarz
                         </div>
