--- a/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
@@ -12,7 +12,7 @@
     </a>
 
     <div class="ck-nav__links">
-        <a asp-area="User" asp-controller="Home" asp-action="Index" class="ck-nav__links__item active">
+        <a asp-area="User" asp-controller="Home" asp-action="Index" class="ck-nav__links__item">
             <img src="~/assets/icons/components/home-orange.svg" alt="Strona główna" />
             <span>Strona główna</span>
         </a>
